# Yousef-learns-DataStructure-Cpp17

./: .clang-format  .gitignore  README.md
1-Vector/: 1-RightRotation.cpp  2-LeftRotation.cpp  3-RightRotationWithSteps.cpp  5-ImprovedSearch.cpp
2_SLL/Easy_HW/: 10_DeleteEvenPos.cpp  11_SortInsert.cpp  1_Destructor.cpp  2_InsertFront.cpp  3_DeleteFront.cpp  4_GetNthBack.cpp  5_IsSame.cpp  7_DeleteWithKey.cpp  8_SwapPairs.cpp  9_reverse.cpp
2_SLL/HardHW/: 1_arrangeOddEven.cpp  2_insertAlternate.cpp  3_add2HugeNumbers.cpp  4_removeRepeated.cpp
2_SLL/MediumHW/: 3_removeDuplicates.cpp  4_removeLastOccurance.cpp  5_moveToBack.cpp  6_recursiveMax.cpp
3_DLL/EasyHW/: 1_deleteWithKey.cpp  2_deleteEvenPos.cpp  3_deleteOddPos.cpp  4_isPalindrome.cpp  deleteWithKey.cpp
3_DLL/basicDLL/: dll.cpp  (+2 more)
5-Queue/: array_queue.hpp  queue_2stk_o(n).cpp  stackWithQueue.cpp
BST/: READEME.md  bst.cpp  bst_cnc.cpp
BinaryHeap/: README.md  max_heap.cpp  min_heap.cpp
BinaryTree/: README.md  main.cpp
DLL/: testDll.cpp
Queue/: circular_queue_without_added_elements.cpp  deque.cpp  priority_queue.cpp  queue_2stk_o(n).cpp  queue_2stk_o1.cpp  queue_2stk_on.cpp  stackWithQueue.cpp  sum_last_k.cpp
Vector/: 1-RightRotation.cpp  2-LeftRotation.cpp  3-RightRotationWithSteps.cpp  4-DeletePosition.cpp
include/: test_suite.hpp
sparse_array/: array_linked_list.cpp  array_linked_list.hpp  sparse_node.hpp
sparse_matrix/: CMakeLists.txt  main.cpp  sparce_matrix.hpp
sparse_matrix/sparse_array/: CMakeLists.txt  array_linked_list.hpp  array_linked_list_debugger.hpp  main.cpp  sparse_node.hpp
(+88 files in other folders)
